# eraser_movie_latentConcept

./: .gitignore  CONCEPT_MAPPER_SUMMARY.md  CONFIG_CHANGES_SUMMARY.md  GPU_ACCELERATION_GUIDE.md  README.md  SMALL_DATASET_CONFIG_GUIDE.md  config.env  load_env.sh  pyproject.toml
data/: defect_test.txt  defect_valid.txt
scripts/dev_set/IG_backpropagation/: ig.sh
scripts/dev_set/clustering/: clustering_base_work.sh  clustering_conceptX.sh
scripts/dev_set/concept_mapper/: logistic_regression.sh  match_representation.sh
scripts/dev_set/generate_explanation_files/: generate_CLS_explanation.sh  generate_IG_explanation.sh
scripts/dev_set/llm_evaluation/: evaluate_with_llm.sh
scripts/train_classifier/: evaluate_bert_sentiment.sh  train_bert_sentiment.sh
scripts/visualization/: run_visualization.sh
src/IG_backpropagation/: ig_for_sequence_classification.py
src/clustering/: compare_clustering.py  create_data_single_layer.py  get_kmeans_clusters.py  neurox_extraction.py
src/concept_mapper/: README.md  neural_network.py  random_forest.py  requirements.txt  xgboost_classifier.py
src/data_processing/: convert_bigclonebench_to_lacoat.py  convert_defect_detection_to_lacoat.py  convert_poj104_to_lacoat.py
src/generate_explanation_files/: generate_CLS_explanation.py
src/llm_evaluation/: __init__.py  evaluate_with_llm.py
src/llm_explanation/: __init__.py  extract_concept_labels.py  generate_llm_explanation.py
src/train_classifier/: evaluate_bert_sentiment.py  train_bert_sentiment.py
src/visualization/: visualize_clusters.py
utils/: constants.py
(+20 files in other folders)
