[project]
name = "LatentConceptExplanation"
version = "0.1.0"
requires-python = ">=3.10, <3.12"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "dill>=0.3.0",
    "transformers>=4.6.0",
    "torch>=2.0.0",
    "captum>=0.4.0",
    "tqdm>=4.60.0",
    "jinja2>=3.0.0",
    "scipy>=1.7.0",
    "h5py>=3.1.0",
    "imbalanced-learn>=0.8.0",
]

[tool.setuptools]
packages = { find = { include = ["src", "src.*", "utils", "utils.*"] } }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }